n_estimators set to be the same as during experiments

--- a/Project2/Python_scripts/artificial-submission.ipynb
+++ b/Project2/Python_scripts/artificial-submission.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4601e4",
+   "id": "9825d868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92de2e33",
+   "id": "e733ad8e",
    "metadata": {},
    "source": [
     "Wzięte z notebooka Boruta-artificial"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c37970",
+   "id": "75b38334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06ca83a9",
+   "id": "7797e235",
    "metadata": {},
    "source": [
     "## 1. Verification if selected subset is correct\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33511e3d",
+   "id": "d5dde41d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa8818b7",
+   "id": "d009c993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,18 +68,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1788349b",
+   "id": "8cddcf9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_clasif=RandomForestClassifier()\n",
+    "rf_clasif=RandomForestClassifier(n_estimators=150)\n",
     "rf_clasif.fit(X_art_train_st, y_art_train)\n",
     "balanced_accuracy_score(y_true=y_art_test,y_pred=rf_clasif.predict(X_art_test_st))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f66251ce",
+   "id": "f2eb7ac3",
    "metadata": {},
    "source": [
     "## 2. Training classifier on whole dataset"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d138b6b",
+   "id": "4064fc4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a40b66d4",
+   "id": "4a5f2453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8256b9e",
+   "id": "2bd82dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +120,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32d75f32",
+   "id": "a77e9737",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_clasif=RandomForestClassifier()\n",
+    "rf_clasif=RandomForestClassifier(n_estimators=150)\n",
     "rf_clasif.fit(X_artificial, y_artificial)\n",
     "predictions=rf_clasif.predict_proba(X_art_validation)"
    ]
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9d7496f",
+   "id": "722ed23d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4c0f94",
+   "id": "e488924d",
    "metadata": {},
    "source": [
     "**UWAGA TRZEBA PAMIĘTAĆ O DODANIU 1 DO TYCH NUMERÓW BO MA BYĆ TO NUMERACJA \"R-owa\"**"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c51356fc",
+   "id": "4aa2bb50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df42088f",
+   "id": "11198845",
    "metadata": {},
    "source": [
     "**Należy jeszcze dodać jedną linijkę \"SZYHRY\" na samej górze**"
