submission data in data/submission

--- a/Project2/Python_scripts/digits_submission.ipynb
+++ b/Project2/Python_scripts/digits_submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "efficient-active",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "opponent-thesaurus",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "numerical-dublin",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        "[1000 rows x 5000 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "id": "fatty-appeal",
    "metadata": {},
    "outputs": [],
@@ -406,33 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "later-eleven",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pawel/.local/lib/python3.6/site-packages/xgboost/sklearn.py:1224: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[19:59:06] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds_chi, model_chi, vars_chi = digits_predict(x_train, y_train, x_valid, chi2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "exempt-avenue",
    "metadata": {},
    "outputs": [
@@ -442,7 +426,7 @@
        "200"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "future-knitting",
    "metadata": {},
    "outputs": [],
@@ -463,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "id": "median-rental",
    "metadata": {},
    "outputs": [
@@ -473,7 +457,7 @@
        "(1000,)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,9 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "id": "fluid-backing",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -515,7 +501,7 @@
        "       2.74369985e-01, 9.99774039e-01, 1.03810674e-03, 9.99605238e-01,\n",
        "       1.22792716e-03, 9.74716723e-01, 9.99580324e-01, 9.57741082e-01,\n",
        "       2.10171820e-05, 2.18863283e-06, 9.98497844e-01, 7.67822145e-03,\n",
-       "       9.98731673e-01, 3.68093606e-05, 1.10508032e-01, 9.99655008e-01,\n",
+       "       9.98731673e-01, 3.68093606e-05, 1.10508040e-01, 9.99655008e-01,\n",
        "       2.29250081e-02, 7.47276281e-05, 9.95540202e-01, 9.97685790e-01,\n",
        "       9.99445021e-01, 9.99918699e-01, 1.40340735e-05, 9.92870510e-01,\n",
        "       9.99988079e-01, 1.49539037e-05, 9.76599038e-01, 6.97444193e-05,\n",
@@ -744,7 +730,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "id": "employed-morning",
    "metadata": {},
    "outputs": [],
@@ -765,12 +751,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "id": "random-childhood",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/sumbission/SZYHRY_digits_prediction.txt', 'w') as f:\n",
+    "with open('../data/submission/SZYHRY_digits_prediction.txt', 'w') as f:\n",
     "    f.write('\"SZYHRY\"\\n')\n",
     "    for c in chi_probs:\n",
     "        f.write(str(c))\n",
@@ -779,12 +765,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "id": "painful-soccer",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/sumbission/SZYHRY_digits_features.txt', 'w') as f:\n",
+    "with open('../data/submission/SZYHRY_digits_features.txt', 'w') as f:\n",
     "    f.write('\"SZYHRY\"\\n')\n",
     "    for v in final_vars:\n",
     "        f.write(str(v))\n",
@@ -793,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "id": "beginning-surname",
    "metadata": {},
    "outputs": [
@@ -803,7 +789,7 @@
        "200"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
